# stackbox.rs

./: .gitignore  Cargo.toml  README.md  fix-rustdoc-css.html  miri_setup.sh  miri_test.sh
.cargo/: config
.github/workflows/: CI.yml  future-proof.yml
src/: iter.rs  lib.rs  marker.rs  ptr.rs  slot.rs
src/dyn_traits/: any.rs  custom_dyn.rs  fn_once.rs  mod.rs  tests.rs
src/stackbox/: mod.rs
src/stackbox/slice/: iter.rs  mod.rs
